samples/_failures_safe/1761087474_42381e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a944721c.c: In function ‘main’:
./samples/SAFE/__tmp_a944721c.c:147:9: error: expected declaration or statement at end of input
  147 |         printf("Error reading input.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a944721c.c:147:9: error: expected declaration or statement at end of input
